# SFML-book

./: .gitignore  .gitmodules  CMakeLists.txt  Credits.txt  LICENSE-MIT  README.md
01_Introduction/: CMakeLists.txt
01_Introduction/src/SFML-Book/: Game.cpp  main.cpp
02_Game_Archi/: CMakeLists.txt
02_Game_Archi/include/SFML-Book/: Action.hpp  ActionMap.hpp  ActionMap.tpl  ActionTaget.hpp  ActionTarget.hpp  ActionTarget.tpl  Configuration.hpp  Game.hpp  Player.hpp  Player.tpl  ResourceManager.hpp  ResourceManager.tpl
02_Game_Archi/src/SFML-Book/: Action.cpp  ActionTaget.cpp  ActionTarget.cpp  Configuration.cpp  Game.cpp  Player.cpp  ResourceManager.cpp  main.cpp
03_Simple_2D_game/Asteroid/: CMakeLists.txt
03_Simple_2D_game/Asteroid/include/SFML-Book/: ActionMap.hpp  ActionTarget.hpp  Collision.hpp  Configuration.hpp  Enemy.hpp  Entity.hpp  Entity.tpl  Game.hpp  Meteor.hpp  Player.hpp  Player.tpl  Saucer.hpp  Shoot.hpp  World.hpp  random.hpp
03_Simple_2D_game/Asteroid/media/sounds/: boom.flac  boom2.flac  explosion1.flac  explosion2.flac  hyperspace.flac  spawn1.flac
03_Simple_2D_game/Asteroid/src/SFML-Book/: Action.cpp  Collision.cpp  Configuration.cpp  Enemy.cpp  Entity.cpp  Game.cpp  Meteor.cpp  Player.cpp  Saucer.cpp  Shoot.cpp  World.cpp  main.cpp
03_Simple_2D_game/Tetris/: CMakeLists.txt
03_Simple_2D_game/Tetris/include/SFML-Book/: Board.hpp  Game.hpp  Piece.hpp  Stats.hpp  random.hpp
03_Simple_2D_game/Tetris/src/SFML-Book/: Board.cpp  Game.cpp  Piece.cpp  Stats.cpp  main.cpp
04_Physics/Gravitris/: 04_Gravitris  CMakeLists.txt
04_Physics/Gravitris/include/SFML-Book/: Configuration.hpp  DebugDraw.hpp  Game.hpp  Piece.hpp  ResourceManager.hpp  ResourceManager.tpl  Stats.hpp  World.hpp  converter.hpp
04_Physics/Gravitris/src/SFML-Book/: Configuration.cpp  DebugDraw.cpp  Game.cpp  Piece.cpp  Stats.cpp  World.cpp  main.cpp
05_GUI/: CMakeLists.txt
05_GUI/include/SFML-Book/: Configuration.hpp  Game.hpp  Piece.hpp  ResourceManager.tpl  Stats.hpp  World.hpp  converter.hpp
05_GUI/include/SFML-Book/gui/: Button.hpp  Container.hpp  Frame.hpp  Gui.hpp  Label.hpp  Layout.hpp  TextButton.hpp  VLayout.hpp  Widget.hpp
05_GUI/media/sounds/: levelup.flac  spawn.flac
05_GUI/src/SFML-Book/: Configuration.cpp  DebugDraw.cpp  Game.cpp  Piece.cpp  Stats.cpp  World.cpp  main.cpp
05_GUI/src/SFML-Book/gui/: Button.cpp  CMakeLists.txt  Frame.cpp  Label.cpp  Layout.cpp  TextButton.cpp  VLayout.cpp  Widget.cpp
07_2D_iso_game/: 07_2D_iso_game  CMakeLists.txt  map.json
07_2D_iso_game/include/SFML-Book/: Component.hpp  Configuration.hpp  Entity.hpp  Game.hpp  Helpers.hpp  Level.hpp  System.hpp  Team.hpp  TeamGui.hpp  World.hpp  std_hash.hpp
07_2D_iso_game/media/: map.json  map2.json
07_2D_iso_game/media/gimp/: eye.xcf  worm.xcf  worms_tree.xcf
07_2D_iso_game/media/sounds/: HitWorm.flac  HittedEye.flac  HittedWorm.flac  SpawnEye.flac  SpawnWormEgg.flac
07_2D_iso_game/src/SFML-Book/: Component.cpp  Configuration.cpp  Entity.cpp  Game.cpp  Helpers.cpp  Level.cpp  System.cpp  Team.cpp  TeamGui.cpp  World.cpp  main.cpp
08_Multiplayer/DataPersistence/src/SFML-Book/common/: CMakeLists.txt  Configuration.cpp
08_Multiplayer/Networking/: CMakeLists.txt
08_Multiplayer/Networking/media/: gen_map.py  map.json
08_Multiplayer/Networking/media/font/: Creative Commons Lizenz.txt
08_networking/: CMakeLists.txt
08_networking/include/SFML-Book/: Component.hpp  Configuration.hpp  Game.hpp  Helpers.hpp
08_networking/include/SFML-Book/client/: Client.hpp  Component.hpp  Entity.hpp  Game.hpp  Gui.hpp  Level.hpp  System.hpp
08_networking/include/SFML-Book/common/: Component.hpp  Connection.hpp  FuncIds.hpp  FuncIds.hppa  Game.hpp  Helpers.hpp  Level.hpp  Packet.hpp  System.hpp  Team.hpp  TeamGui.hpp
08_networking/include/SFML-Book/server/: Client.hpp  Component.hpp  Entity.hpp  Game.hpp  Server.hpp  System.hpp  Team.hpp
08_networking/media/: map.json  map.xcf
08_networking/media/effects/: README.txt
08_networking/media/sounds/: HittedMain.flac
08_networking/src/SFML-Book/: Configuration.cpp  Game.cpp  Level.cpp  Team.cpp  TeamGui.cpp
08_networking/src/SFML-Book/client/: CMakeLists.txt  Client.cpp  Component.cpp  Entity.cpp  Game.cpp  Gui.cpp  Level.cpp  main.cpp
08_networking/src/SFML-Book/common/: CMakeLists.txt  Component.cpp  Configuration.cpp  Connection.cpp  Entity.cpp  Game.cpp  Helpers.cpp  Level.cpp  Packet.cpp  System.cpp  Team.cpp  TeamGui.cpp  main.cpp
08_networking/src/SFML-Book/server/: CMakeLists.txt  Client.cpp  Component.cpp  Entity.cpp  Game.cpp  Server.cpp  System.cpp  Team.cpp  main.cpp
extlibs/SFML-utils/: CMakeLists.txt  LICENSE  README.md
extlibs/SFML-utils/cmake/modules/: FindUtils.cmake
extlibs/SFML-utils/doc/: CMakeLists.txt  Doxyfile.in
extlibs/SFML-utils/examples/: CMakeLists.txt  core.cpp  es.cpp  gui.cpp  map.cpp  map.json  map2.json
extlibs/SFML-utils/include/SFML-utils/: Core.hpp  ES.hpp  Gui.hpp  Map.hpp
extlibs/SFML-utils/include/SFML-utils/core/: Action.hpp  (+8 more)
extlibs/SFML-utils/src/: CMakeLists.txt
extlibs/SFML-utils/src/SFML-utils/: CMakeLists.txt
extlibs/cpp-ORM/: CMakeLists.txt  README.md  changelog
extlibs/cpp-ORM/doc/: Doxyfile.in
extlibs/cpp-ORM/examples/: CMakeLists.txt  main.cpp
extlibs/cpp-ORM/include/ORM/: backends.hpp  debug.hpp  externals.hpp  fields.hpp  models.hpp
extlibs/cpp-ORM/src/ORM/: CMakeLists.txt
extlibs/cpp-utils/: CMakeLists.txt  LICENSE  README.md  changelog.md
extlibs/cpp-utils/cmake/: cmake_uninstall.cmake.in
extlibs/cpp-utils/doc/: CMakeLists.txt  Doxyfile.in
extlibs/cpp-utils/examples/: CMakeLists.txt  example-big.json  example.json  f.cpp  f2.cpp  icpp.icpp  json-test.cpp  utils-test-tr.cpp  utils-test.cpp
extlibs/cpp-utils/include/utils/: functional.hpp  functional.tpl  json.hpp  log.hpp  log.tpl  maths.hpp  maths.tpl  memory.hpp  memory.tpl  plot.hpp  plot.tpl  string.hpp  string.tpl  sys.hpp  sys.tpl  thread.hpp  thread.tpl  tr.hpp
extlibs/cpp-utils/src/utils/: CMakeLists.txt  functional.cpp  log.cpp  memory.cpp  plot.cpp  string.cpp  sys.cpp  thread.cpp
(+254 files in other folders)
